# Kung-Fu-Chess

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md
KFC_AnimationUtils/: remove_green_screen_simple.py
KFC_Cpp/: CMakeLists.txt
KFC_Cpp/src/: Board.cpp  Board.hpp  Command.hpp  Common.hpp  Game.hpp  Graphics.cpp  Graphics.hpp  GraphicsFactory.hpp  KeyboardProcessor.hpp  Moves.cpp  Physics.hpp  Piece.hpp  PieceFactory.hpp  State.hpp  img.cpp  img.hpp  main.cpp
KFC_Cpp/src/img/: Img.hpp  ImgFactory.hpp  MockImg.hpp  OpenCvImg.cpp  OpenCvImg.hpp
KFC_Cpp/tests/: FactoryTests.cpp  NeedClearPathTests.cpp  PieceStateTests.cpp
KFC_Py/: main.py
KFC_Py/Tests/: test_factories.py  test_moves_board_img.py  test_piece_state_game.py
KFC_java/src/main/java/: Board.java  BoardFactory.java  BuffImg.java  Example.java  Game.java  GameFactory.java  Graphics.java  Img.java  KeyboardProducer.java  MainGame.java  PieceFactory.java  State.java
KFC_java/src/test/java/: FactoriesTest.java  KeyboardProducerTest.java
KungFu Chess/: Board.py  Game.py  GameFactory.py  Graphics.py  GraphicsFactory.py  KeyboardInput.py  Moves.py  Physics.py  Piece.py  PieceFactory.py  State.py  img.py  main.py  mock_img.py  state_transitions.csv
KungFu Chess/Tests/: test_factories.py  test_fsm_and_physics.py  test_game.py  test_game_factory.py  test_game_full_play.py  test_graphics.py  test_graphics_and_moves.py  test_img.py  test_integration.py  test_kungfu_chess.py  test_motion_various.py  test_moves_board_img.py  test_physics.py  test_physics_state.py  test_piece_actions.py  test_piece_state_game.py  test_state.py  test_straight_line.py
my_cpp/: CMakeLists.txt
my_cpp/my_cpp_pub/: GameLog.hpp  Listener.hpp  Publisher.hpp  Score.hpp
my_cpp/src/: Board.hpp  Command.hpp  Game.cpp  Game.hpp  GameFactory.hpp  Graphics.hpp  GraphicsFactory.hpp  Img.cpp  Img.hpp  KeyboardInput.hpp  MockImg.hpp  Moves.hpp  Physics.hpp  PhysicsFactory.hpp  Piece.cpp  Piece.hpp  PieceFactory.hpp  Sound.hpp  State.hpp  main.cpp
my_cpp_pub/: GameLog.hpp  Listener.cpp  Listener.hpp  Publisher.hpp  Score.hpp
